# resume-2025-novabright

./: # Bridging Minds and Machines: Key Techn.ini  .gitignore  CLAUDE.md  Cover_Letter_Template.md  Integration_Summary.md  ORGANIZATION_SUMMARY.md  README.md  REVISED_BIOGRAPHICAL_PROFILE.md  RYAN.md  Resume_Tailoring_Guide.md  Ryan_Oates_Resume.md  cognitive-tasks-optimization-blog.md  documentation-standards.md  for_science_v3.code-workspace  integration-plan.md  interdisciplinary_uniqueness_framework.md  jun2  key-modules-specification.md  lib5.ini  package-lock.json  pixi.toml  repository-design-summary.md  ryan_oates_resume.tex  ryan_oates_resume_revised.md  security_analysis_report.md  start-local-server.py  total.ini  version-control-setup.md
.github/workflows/: ci.yml
Emergent_Consciousness/: .gitignore  NEURAL_METABOLIC_VISUALIZATION_README.md  emergent-consciousness-visualization.html  for_science.code-workspace  for_science_v1.code-workspace  interactive-artifact-viewer.html  neural-metabolic-evolution.html  neural-metabolic-integration.html  neural-metabolic-integrationv01.html  opus-v1.md  rule13.json  rule6.md  v10.html
Emergent_Consciousness/.cursor/rules/: # Meta-Optimization Framework Project An.md  review.mdc
Emergent_Consciousness/archived_html_versions/: convergence.html  covergencev2.html  interactive-artifact-viewer.html  metrics.txt  neural-metabolic-integration.html  neural-metabolic-v1.5.html
Emergent_Consciousness/chats/: 3.txt  claude-alter-compaact2.txt  compact2.txt  enhancedarti.txt
Emergent_Consciousness/html_only_verisons_current/: NEURAL_METABOLIC_VISUALIZATION_README.md  emergent-consciousness-visualization-enhanced.html
appendices/: Appendix_A_Homepage_Blog_Post.md  Appendix_A_Homepage_Blog_Postv1.pages  Appendix_B_Concise_Summary.md  Appendix_C_Additional_Technical_Details.ini  Appendix_D_Claude_AI_Collaboration_Notes.md  pre-1.md
application_submissions/: Software_enigneering_intern_1848.md  Verse.md  dex_mock_ai_engineer.md  executive_assistant.md  verse_2.md
chapters/: # Repository Design Meta Optimization Analysis   Chapter_01_Introduction_Bridging_Minds_and_Machines.md  Chapter_02_Interdisciplinary_Framework_and_Uniqueness.md  Chapter_03_Technical_Framework_and_Mathematical_Foundation.md  Chapter_04_Core_Algorithms_and_Implementation.md  Chapter_05_Cognitive_Tasks_Optimization.md  Chapter_06_Integration_Plan_and_Methodology.md  Chapter_07_Key_Modules_and_System_Architecture.md  Chapter_08_Repository_Design_and_Implementation.md  Chapter_09_Documentation_Standards_and_Best_Practices.md  Chapter_10_Version_Control_and_Development_Workflow.md  Chapter_11_Integration_Summary_and_Results.md  Chapter_12_Repository_Design_Summary_and_Conclusions.md
meta-optimization-framework/: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUCCESS_SUMMARY.md  LICENSE  README.md  WEEK1_2_COMPLETION_REPORT.md  WEEK1_COMPLETION_SUMMARY.md  WEEK_3_4_COMPLETION_REPORT.md  pyproject.toml  requirements.txt  setup.py
meta-optimization-framework/.github/workflows/: ci.yml
meta-optimization-framework/configs/: default_config.yaml
meta-optimization-framework/docs/: Makefile  conf.py  index.rst  simple_index.rst
meta-optimization-framework/examples/: authenticity_task.md  basic_optimization_example.py  comprehensive_demo.py  end_to_end_demo.py  optimization_analysis_mock.md  plot_formula.wl
meta-optimization-framework/experiments/: randomness_impact_study.py
meta-optimization-framework/math/: math-gpt41.md  my_math.py
meta-optimization-framework/scripts/: run_evaluation.py  run_experiments.py
meta-optimization-framework/src/: __init__.py
meta-optimization-framework/src/bias_framework/: __init__.py  agent_based_model.py  bias_mechanisms.py
meta-optimization-framework/src/core/: __init__.py  bias_modeling.py  cognitive_regularization.py  dynamic_integration.py  meta_optimization.py
meta-optimization-framework/src/evaluation/: __init__.py  benchmark_suite.py  cognitive_metrics.py  efficiency_analyzer.py  performance_evaluator.py  statistical_validator.py
meta-optimization-framework/src/neuro_symbolic/: __init__.py  adaptive_weighting.py  neural_component.py  symbolic_component.py
meta-optimization-framework/src/optimization/: __init__.py  adaptive_optimizer.py  architecture_search.py  cognitive_constraints.py  efficiency_metrics.py
meta-optimization-framework/src/utils/: __init__.py  config_loader.py  data_processing.py  failure_documentation.py  statistical_analysis.py  visualization.py
meta-optimization-framework/tests/: __init__.py
meta-optimization-framework/tests/integration/: test_end_to_end.py
meta-optimization-framework/tests/unit/: test_bias_framework.py  test_meta_optimization.py  test_neuro_symbolic.py  test_optimization.py
misc/: Monographv1 copy.pages  TABLE_OF_CONTENTS.md  analysis_test.md  draft-q.md  full-draft-1.md  litelm-completion.md
misc/chats/: litelm-completion.md
misc/pdf/: thoughts-pdf-analysis.md
mojo-academic-research-system/: README.md  academic_research_workflow.mojo  batches  example_usage.mojo  mojoproject.toml  pattern_matcher.mojo  research_config.mojo  validation_system.mojo
neurosymbolic_framework/core/: __init__.py  neural_engine.py  symbolic_engine.py
overwrite/: pixi.toml
react-graphql-dashboard/: CONSCIOUSNESS_VISUALIZATION_INTEGRATION.md  DEPLOYMENT_GUIDE.md  Demo Audit.result  ENTERPRISE_PILOT_FRAMEWORK.md  ETHICS.md  README.md  infographic.html  package-lock.json  package.json
react-graphql-dashboard/backend/: package.json
react-graphql-dashboard/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
react-graphql-dashboard/graphQL_resume/: README.md  samconfig.toml  template.yaml
react-graphql-dashboard/infrastructure/: package.json
react-graphql-dashboard/scripts/: performance-benchmark.js  publish-dashboard.js
resume-2025-novabright/react-graphql-dashboard/: CONSCIOUSNESS_INTEGRATION.md
src/components/: ActivityFeed.tsx
supporting_materials/: Ryan_Oates_Resume.md  Sample_Cover_Letters.md
(+31 files in other folders)
